Fix background image on mobile and style worship info

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,7 +24,7 @@
   }
 
   .brand {
-    margin-left: 10px;
+    // margin-left: 10px;
     color: #555;
     font-size: 18px;
     font-family: 'architects daughter' -apple-system, BlinkMacSystemFont,
